@@ -95,7 +95,7 @@ kbd_backlight_set(int val, int who)
 
   FILE *fp;
 
-  if (kbd_bck_info.inhibit)
+  if (kbd_bck_info.inhibit ^ KBD_INHIBIT_CFG)
     return;
 
   curval = kbd_backlight_get();
@@ -159,7 +159,7 @@ kbd_backlight_step(int dir)
   int val;
   int newval;
 
-  if (kbd_bck_info.inhibit)
+  if (kbd_bck_info.inhibit ^ KBD_INHIBIT_CFG)
     return;
 
   val = kbd_backlight_get();
@@ -202,7 +202,9 @@ kbd_backlight_init(void)
   if (kbd_cfg.auto_on)
     kbd_bck_info.inhibit = 0;
   else
-    kbd_bck_info.inhibit = KBD_INHIBIT_USER;
+    kbd_bck_info.inhibit = KBD_INHIBIT_CFG;
+
+  kbd_bck_info.toggle_lvl = kbd_cfg.auto_lvl;
 
   kbd_bck_info.inhibit_lvl = 0;
 
