@@ -4,6 +4,8 @@ ChangeLog for pommed
 version 1.4:
 	- pommed: add Geyser keyboard identification, PowerBook5,8 (at
 	least) and later.
+	- pommed: added a simple backlight toggle mode, used when the
+	automatic backlight is disabled in the configuration file.
 
 version 1.3:
 	- gpomme: added configuration GUI, courtesy of Daniel G. SIEGEL.
